[package]
name = "vpnserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.3", features = ["derive"] }
etherparse = "0.13.0"
openssl = "0.10.48"
qprov = { version = "0.1.0", path = "../qprov" }

[profile.dev.package."rmce"]
opt-level = 2
