[package]
name = "vpnserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayref = "0.3.7"
bincode = "1.3.3"
boxed-array = "0.1.0"
clap = { version = "4.1.3", features = ["derive"] }
etherparse = "0.13.0"
lazy_static = "1.4.0"
log = "0.4.17"
mio-tun = { version = "0.1.0", path = "./mio-tun" }
openssl = "0.10.48"
qprov = { version = "0.1.0", path = "./qprov" }
serde = { version = "1.0.160", features = ["derive"] }
uuid = { version = "1.3.2", features = ["v4", "serde"] }
vpnmessaging = { version = "0.1.0", path = "./vpnmessaging" }

[profile.dev.package."*"]
opt-level = 3
